# Trialix

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
documents/: MVP.md  design.md  scope.md
examples/: TUTORIALS.md  generate_sample_data.py  oncology_trial.csv  quickstart.py  tutorial_01_basic_workflow.py  tutorial_02_optimizing_criteria.py  tutorial_03_interpreting_results.py  tutorial_04_complete_case_study.py
src/trialix/: __init__.py
src/trialix/api/: __init__.py  enrichment.py
src/trialix/cli/: __init__.py  commands.py
src/trialix/core/: __init__.py  biomarker_analysis.py  criteria_generator.py  cutoff_optimizer.py  data_loader.py
src/trialix/utils/: __init__.py  constants.py  formatters.py  validators.py
src/trialix/visualizations/: __init__.py  biomarker_plots.py  enrichment_plots.py  roc_plots.py
test_results/: recommended_criteria.txt
tests/: test_basic.py
