[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialix"
version = "0.1.0"
description = "Clinical Trial Enrichment Analysis - Optimize patient selection and identify predictive biomarkers"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Trialix Contributors"}
]
keywords = [
    "clinical-trials",
    "biomarkers",
    "enrichment-analysis",
    "biostatistics",
    "pharmaceutical",
    "patient-selection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]
interactive = [
    "plotly>=5.17.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Siavashghaffari/Trialix/Trialix"
Documentation = "https://github.com/Siavashghaffari/Trialix/Trialix#readme"
Repository = "https://github.com/Siavashghaffari/Trialix/Trialix"
"Bug Tracker" = "https://github.com/Siavashghaffari/Trialix/Trialix/issues"

[project.scripts]
trialix = "trialix.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=trialix --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
